ligolang/src/test/contracts/negative/deep_pattern_matching/pm_fail12.mligo
type recordi = { a : int list option ; b : int list }

let t13 = fun (x:recordi) ->
  match x with
  | { a = Some ([]) ; b = (hd::tl) } -> hd
  | { a = Some (hd::tl) ; b = [] } -> hd